# CrossyRoad.LI1_Project

./: 2022li1g047.cabal  README.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Crossy_Road5.hi  Crossy_Road5.hs  LI12223.hs  Main.hs  Tarefa1_2022li1g047.hi  Tarefa1_2022li1g047.hs  Tarefa2_2022li1g047.hi  Tarefa2_2022li1g047.hs  Tarefa3_2022li1g047.hi  Tarefa3_2022li1g047.hs  Tarefa4_2022li1g047.hi  Tarefa4_2022li1g047.hs  Tarefa5_2022li1g047.hi  Tarefa5_2022li1g047.hs  cr-config.txt  cr-saved.txt  cr-saved_-_Copia.txt
src/doc/: Tarefa1_2022li1g047.html  Tarefa2_2022li1g047.html  Tarefa3_2022li1g047.html  Tarefa4_2022li1g047.html  doc-index.html  index.html
tests/: Spec.hs  Tarefa1_2022li1g047_Spec.hs  Tarefa2_2022li1g047_Spec.hs  Tarefa3_2022li1g047_Spec.hs  Tarefa4_2022li1g047_Spec.hs  Tarefa5_2022lig047_Spec.hs
