cabal-version:      2.4
name:               2022li1g047
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Afonso Dionísio Santos <a104276@alunos.uminho.pt>
                    Luis Enrique Diaz de Freitas <a104000@alunos.uminho.pt>

library 
  exposed-modules:
    LI12223
    Tarefa1_2022li1g047
    Tarefa2_2022li1g047
    Tarefa3_2022li1g047
    Tarefa4_2022li1g047
  build-depends:    base ^>=4.16.3.0, gloss , random
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g047
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g047
    Tarefa2_2022li1g047
    Tarefa3_2022li1g047
    Tarefa4_2022li1g047
  build-depends:    base ^>=4.16.3.0, gloss, random
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g047-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g047
    Tarefa2_2022li1g047
    Tarefa3_2022li1g047
    Tarefa4_2022li1g047
    Tarefa1_2022li1g047_Spec
    Tarefa2_2022li1g047_Spec
    Tarefa3_2022li1g047_Spec
    Tarefa4_2022li1g047_Spec
  build-depends:        base ^>=4.16.3.0, HUnit, Gloss ,random , directory 
  hs-source-dirs:       tests src
  default-language:     Haskell2010
